# advent24

./: .gitignore  Cargo.toml
.github/workflows/: codspeed.yml
benches/: days.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs  main.rs  util.rs
