[package]
name = "advent24"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "days"
harness = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
memchr = "2.7.4"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", default-features = false }
indoc = "2.0.5"
paste = "1.0.15"
